# term-desktop

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: README.md  architecture.md  build-and-deploy.md  development-plan.md  tech-stack.md
public/: sessions-import-example.json
scripts/: sync-cargo-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: connection_pool.rs  error.rs  events.rs  lib.rs
src-tauri/src/commands/: config.rs  credentials.rs  ftp.rs  local_fs.rs  mod.rs  open.rs  settings.rs  sftp.rs  terminal.rs
src-tauri/src/models/: mod.rs  session.rs  settings.rs  sftp.rs
src-tauri/src/services/: config.rs  credential_vault.rs  ftp.rs  local_fs.rs  mod.rs  settings.rs  sftp.rs  ssh.rs
src-tauri/src/utils/: cache_paths.rs  mod.rs  paths.rs  sftp_paths.rs  transfer.rs
src/hooks/: useAppShortcuts.ts
src/i18n/: config.ts  index.ts  ipcErrors.ts  types.ts  useAppErrorMessage.ts
src/ipc/: client.ts  commands.ts  credentials.ts  events.ts  ftp.ts  local.ts  open.ts  sessions.ts  settings.ts  sftp.ts  terminal.ts
src/stores/: AppStore.ts  FileBrowserStore.ts  FileConnectionStore.ts  LocalBrowserStore.ts  RemoteBrowserStore.ts  RootStore.ts  SessionStore.ts  SettingsStore.ts  SftpBrowserStore.ts  StoreProvider.tsx  TerminalStore.ts  TransferStore.ts  VaultStore.ts  WorkspaceStore.ts  context.ts  index.ts  useStores.ts
(+104 files in other folders)
