[package]
name = "app"
version = "0.3.0"
description = "TermaSSH — SSH terminal and file browser"
authors = ["TermaSSH"]
license = "MIT"
repository = "https://github.com/beliberda/term-desktop"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
russh = "0.44"
russh-keys = "0.44"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
base64 = "0.22"
async-trait = "0.1"
futures = "0.3"
russh-sftp = "2.3"
chrono = "0.4"
suppaftp = { version = "8", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
open = "5"
dirs = "6"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
